加入收藏功能实现

--- a/articleTopic.html
+++ b/articleTopic.html
@@ -73,7 +73,7 @@
                 <a href="" class="box top-nav">破解游戏盒子</a>
             </div>
             <div class="top-right">
-                <a href="">收藏本站</a>
+                <a href="javascript:;" onclick="shoucang(document.title, window.location);">收藏本站</a>
             </div>
         </div>
     </div>
