--- a/articleTopic.html
+++ b/articleTopic.html
@@ -104,8 +104,7 @@
     </div>
 
     <div class="general ofh">
-
-        <div class="contentbg" style="margin-top:100px">
+        <div class="contentbg">
             <div class="ppw_report">
                 <div class="tag_num tag_num1"></div>
                 <div class="ppw_report_left">
@@ -127,11 +126,8 @@
                                 </p>
                                 <p class="p2">
                                     <em>推荐指数：</em>
-                                    <img src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star2.png" />
+                                    <img src="static/images/star1.png" /><img src="static/images/star1.png" /><img src="static/images/star1.png" /><img
+                                        src="static/images/star1.png" /><img src="static/images/star2.png" />
                                 </p>
                             </dt>
                             <dd><strong> 上榜理由：</strong>《闹闹天宫》这款由闹闹工作室自主研发的横版MOBA国风手游。在横版视角上脱离地面、在空中全方位自由飞行战斗就很颠覆有木有！在操作上也吸取了传统MOBA游戏的精髓~其次，大家组队开黑的主要目的居然是抢桃子。</dd>
@@ -184,11 +180,8 @@
                                 </p>
                                 <p class="p2">
                                     <em>推荐指数：</em>
-                                    <img src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star2.png" />
+                                    <img src="static/images/star1.png" /><img src="static/images/star1.png" /><img src="static/images/star1.png" /><img
+                                        src="static/images/star1.png" /><img src="static/images/star2.png" />
                                 </p>
                             </dt>
                             <dd><strong> 上榜理由：</strong>《赛尔号:无限宇宙》在继承原作的基础上，开放了星球的自由探索与场景互动。解开彩蛋，收获稀有物品、隐藏精灵。此外，玩家还能建造基地、家具及装饰等，畅享DIY乐趣。游戏中数百种精灵均提供收集，并在对战中重现18种属性相克。</dd>
@@ -241,11 +234,8 @@
                                 </p>
                                 <p class="p2">
                                     <em>推荐指数：</em>
-                                    <img src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star2.png" />
+                                    <img src="static/images/star1.png" /><img src="static/images/star1.png" /><img src="static/images/star1.png" /><img
+                                        src="static/images/star1.png" /><img src="static/images/star2.png" />
                                 </p>
                             </dt>
                             <dd><strong> 上榜理由：</strong>《奇葩战斗家》是一款有趣的角色扮演游戏。玩家在游戏中扮演一个战士，和朋友们联机作乐！奔跑、投掷、使用你能捡到的奇葩道具，在自己被打倒前尽可能多的殴打对面的玩家！一起在《奇葩战斗家》中找寻乐趣~</dd>
@@ -302,11 +292,8 @@
                                 </p>
                                 <p class="p2">
                                     <em>推荐指数：</em>
-                                    <img src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star2.png" />
+                                    <img src="static/images/star1.png" /><img src="static/images/star1.png" /><img src="static/images/star1.png" /><img
+                                        src="static/images/star1.png" /><img src="static/images/star2.png" />
                                 </p>
                             </dt>
                             <dd><strong> 上榜理由：</strong>一架（或者三架）飞机被黑暗包围，你需要根据光的指引向前飞行。但请务必小心突然出现的路障，一不留神可能就粉身碎骨了！三架纸飞机你的手中，分离，聚合。伴随着钢琴的律动向前飞行，越过路上的障碍。</dd>
@@ -357,11 +344,8 @@
                                 </p>
                                 <p class="p2">
                                     <em>推荐指数：</em>
-                                    <img src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star2.png" />
+                                    <img src="static/images/star1.png" /><img src="static/images/star1.png" /><img src="static/images/star1.png" /><img
+                                        src="static/images/star1.png" /><img src="static/images/star2.png" />
                                 </p>
                             </dt>
                             <dd><strong> 上榜理由：</strong>《时之回廊》是一款RogueLike独立游戏。每一次开始都会带来不一样的体验。我们在前作《红石遗迹》的基础上重新雕琢玩法，令战斗系统脱胎于传统格斗游戏，去粕取精，保证低门槛和高操作深度。</dd>
@@ -412,11 +396,8 @@
                                 </p>
                                 <p class="p2">
                                     <em>推荐指数：</em>
-                                    <img src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star1.png" /><img
-                                        src="static/images/star2.png" />
+                                    <img src="static/images/star1.png" /><img src="static/images/star1.png" /><img src="static/images/star1.png" /><img
+                                        src="static/images/star1.png" /><img src="static/images/star2.png" />
                                 </p>
                             </dt>
                             <dd><strong> 上榜理由：</strong>《全民冠军足球》是腾讯FIFPro正版授权策略经营足球手游。拥有63个国家协会及百家俱乐部超过五千名现役球员肖像权。游戏拥有领先的动作捕捉技术，由真实球员参与动作录制。感受足球魅力！</dd>
