修改列表序号

--- a/articleTopic.html
+++ b/articleTopic.html
@@ -106,7 +106,8 @@
     <div class="general ofh">
         <div class="contentbg">
             <div class="ppw_report">
-                <div class="tag_num tag_num1"></div>
+                <span class="num-bg"></span>
+                <span class="game-num">1</span>
                 <div class="ppw_report_left">
                     <p class="p1"><a target="_blank" title="闹闹天宫" href="http://www.pipaw.com/nntg/"><img src="http://img.pipaw.com/pipaw/logo/2018/08/03/88f7cdb5b88167552f658b1616847e69.png"
                                 onerror="javascript:this.src='http://static.pipaw.com/www/default/icon.png?v=2'" /></a></p>
@@ -160,7 +161,8 @@
             </div>
             <div class="ppw_report_bg"></div>
             <div class="ppw_report">
-                <div class="tag_num tag_num2"></div>
+                <span class="num-bg"></span>
+                <span class="game-num">2</span>
                 <div class="ppw_report_left">
                     <p class="p1"><a target="_blank" title="赛尔号：无限宇宙" href="http://www.pipaw.com/sehwxyz/"><img src="http://img.pipaw.com/apply/logo/df5569f648097508eefbfce0a8a63c47.jpg"
                                 onerror="javascript:this.src='http://static.pipaw.com/www/default/icon.png?v=2'" /></a></p>
@@ -214,7 +216,8 @@
             </div>
             <div class="ppw_report_bg"></div>
             <div class="ppw_report">
-                <div class="tag_num tag_num3"></div>
+                <span class="num-bg"></span>
+                <span class="game-num">3</span>
                 <div class="ppw_report_left">
                     <p class="p1"><a target="_blank" title="奇葩战斗家" href="http://www.pipaw.com/qpzdj/"><img src="http://img.pipaw.com/pipaw/logo/2017/07/17/894ceb78b3486bd0686614c3cd301d60.png"
                                 onerror="javascript:this.src='http://static.pipaw.com/www/default/icon.png?v=2'" /></a></p>
@@ -272,7 +275,8 @@
             </div>
             <div class="ppw_report_bg"></div>
             <div class="ppw_report">
-                <div class="tag_num tag_num4"></div>
+                <span class="num-bg"></span>
+                <span class="game-num">4</span>
                 <div class="ppw_report_left">
                     <p class="p1"><a target="_blank" title="白夜迷航：纸飞机" href="http://www.pipaw.com/bymh/"><img src="http://img.pipaw.com/pipaw/logo/2018/05/15/b6893e7dce27c929fd7c556b4992d934.png"
                                 onerror="javascript:this.src='http://static.pipaw.com/www/default/icon.png?v=2'" /></a></p>
@@ -324,7 +328,8 @@
             </div>
             <div class="ppw_report_bg"></div>
             <div class="ppw_report">
-                <div class="tag_num tag_num5"></div>
+                <span class="num-bg"></span>
+                <span class="game-num">5</span>
                 <div class="ppw_report_left">
                     <p class="p1"><a target="_blank" title="时之回廊" href="http://www.pipaw.com/szhl/"><img src="http://img.pipaw.com/pipaw/logo/2018/08/30/c8a3ebfc3ece7b5f34699f3bf3752790.png"
                                 onerror="javascript:this.src='http://static.pipaw.com/www/default/icon.png?v=2'" /></a></p>
@@ -376,7 +381,8 @@
             </div>
             <div class="ppw_report_bg"></div>
             <div class="ppw_report">
-                <div class="tag_num tag_num6"></div>
+                <span class="num-bg"></span>
+                <span class="game-num">6</span>
                 <div class="ppw_report_left">
                     <p class="p1"><a target="_blank" title="全民冠军足球" href="http://www.pipaw.com/qmgjzq/"><img src="http://img.pipaw.com/pipaw/logo/2018/08/06/98277cbaa18b001b83a45bb02f4ae224.png"
                                 onerror="javascript:this.src='http://static.pipaw.com/www/default/icon.png?v=2'" /></a></p>
@@ -498,140 +504,140 @@
                     资讯
                 </em>
                 <a href="/news/79382.html" target="_blank" title="阴阳师白藏主传记如何解锁?">阴阳师白藏主传记如何解锁?</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79380.html" target="_blank" title="《二次元战姬》英雄技能介绍之玉鼎真人">《二次元战姬》英雄技能介绍之玉鼎真人</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79381.html" target="_blank" title="QQ飞车手游月兔头像框怎么获得_月兔头像框获取方式详解">QQ飞车手游月兔头像框怎么获得_月兔头像框获取方式详解</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79378.html" target="_blank" title="《二次元战姬》英雄技能介绍之杨戬">《二次元战姬》英雄技能介绍之杨戬</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79379.html" target="_blank" title="QQ飞车手游月映仙谣套装怎么获得_月映仙谣套装获取方式详解">QQ飞车手游月映仙谣套装怎么获得_月映仙谣套装获取方式详解</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79376.html" target="_blank" title="《虎啸三国》任务系统深度解析">《虎啸三国》任务系统深度解析</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79377.html" target="_blank" title="QQ飞车手游月映仙谣礼盒怎么获得_月映仙谣礼盒获取方式详解">QQ飞车手游月映仙谣礼盒怎么获得_月映仙谣礼盒获取方式详解</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79374.html" target="_blank" title="《虎啸三国》各时期阵容最强推荐">《虎啸三国》各时期阵容最强推荐</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79375.html" target="_blank" title="QQ飞车手游月饼怎么获得_月饼获取方法介绍">QQ飞车手游月饼怎么获得_月饼获取方法介绍</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79373.html" target="_blank" title="《虎啸三国》七大诀窍打造专属部队">《虎啸三国》七大诀窍打造专属部队</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79382.html" target="_blank" title="阴阳师白藏主传记如何解锁?">阴阳师白藏主传记如何解锁?</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79380.html" target="_blank" title="《二次元战姬》英雄技能介绍之玉鼎真人">《二次元战姬》英雄技能介绍之玉鼎真人</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79381.html" target="_blank" title="QQ飞车手游月兔头像框怎么获得_月兔头像框获取方式详解">QQ飞车手游月兔头像框怎么获得_月兔头像框获取方式详解</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79378.html" target="_blank" title="《二次元战姬》英雄技能介绍之杨戬">《二次元战姬》英雄技能介绍之杨戬</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79379.html" target="_blank" title="QQ飞车手游月映仙谣套装怎么获得_月映仙谣套装获取方式详解">QQ飞车手游月映仙谣套装怎么获得_月映仙谣套装获取方式详解</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79376.html" target="_blank" title="《虎啸三国》任务系统深度解析">《虎啸三国》任务系统深度解析</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79377.html" target="_blank" title="QQ飞车手游月映仙谣礼盒怎么获得_月映仙谣礼盒获取方式详解">QQ飞车手游月映仙谣礼盒怎么获得_月映仙谣礼盒获取方式详解</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79374.html" target="_blank" title="《虎啸三国》各时期阵容最强推荐">《虎啸三国》各时期阵容最强推荐</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79375.html" target="_blank" title="QQ飞车手游月饼怎么获得_月饼获取方法介绍">QQ飞车手游月饼怎么获得_月饼获取方法介绍</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
             <li>
                 <em>
                     资讯
                 </em>
                 <a href="/news/79373.html" target="_blank" title="《虎啸三国》七大诀窍打造专属部队">《虎啸三国》七大诀窍打造专属部队</a>
-                <i>[09-19 ]</i>
+                <i>[ 09-19 ]</i>
             </li>
         </ul>
         <div class="ppw_report_bg"></div>
